[package]
name = "authist"
version = "0.2.0"
authors = ["Yuki Kodama <endflow.net@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.11.0"
leptess = "0.8.0"
log = "0.4.8"
imageproc = "0.19.2"
image = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.7.4"
regex = "1"

[features]
trace = []

[profile.release]
lto = true
